updated matrix now displays automatically fixed spacing change when switching between rows/cols

--- a/style.css
+++ b/style.css
@@ -54,11 +54,15 @@ body {
 .by-rows {
   border-bottom: 1px solid red;
   border-top: 1px solid red;
+  border-left: 1px solid white;
+  border-right: 1px solid white;
 }
 
 .by-cols {
   border-left: 1px solid red;
   border-right: 1px solid red;
+  border-bottom: 1px solid white;
+  border-top: 1px solid white;
 }
 
 .ui-state-highlight {
